--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ urllib3 = "^1.26.12"
 pyTelegramBotAPI = "3.7.7"
 telebot = "^0.0.4"
 allow = "^0.0.3"
+pytube = "^12.1.2"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
